--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,7 @@
 @import 'variables';
 @import 'boilerplate';
 @import 'interface';
+@import 'header';
+@import 'login';
 @import 'app';
+@import 'tablelist';
