--- a/assets/scss/_boilerplate.scss
+++ b/assets/scss/_boilerplate.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-	font-family: arial;
+	font-family: var(--font-family-texts);
 	height: 100%;
 }
 
@@ -28,8 +28,12 @@ a {
 }
 
 h1,	h2,	h3,	h4,	h5,	h6 {
+	font-family: var(--font-family-titles);
 	font-size: 1em;
 	line-height: 1;
+}
+img {
+	display: block;
 }
 #__nuxt {
 	display: contents;
