--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,900;1,700&family=Barlow+Semi+Condensed:wght@400;700&family=Barlow:wght@400;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0');
+
 :root {
 	--hue: 210;
 	--sat: 40%;
 	--lum: 40%;
 	--font-size-global: 16px;
 	--font-size-evaluation: 16px;
+	--font-size-annotation: 16px;
+	--font-family-texts: 'Barlow Semi Condensed', sans-serif;
+	--font-family-narrow: 'Barlow Condensed', sans-serif;
+	--font-family-titles: 'Barlow', sans-serif;
 }
+
+// .material-symbols-outlined {
+// 	font-variation-settings:
+// 		'FILL' 0,
+// 		'wght' 400,
+// 		'GRAD' 0,
+// 		'opsz' 40
+// }
