--- a/assets/scss/_tablelist.scss
+++ b/assets/scss/_tablelist.scss
@@ -1,7 +1,8 @@
 table.list {
+    --columns: 3;
     border-collapse: collapse;
     display: grid;
-    grid-template-columns: auto repeat(1, auto);
+    grid-template-columns: [checks] auto [data] repeat(var(--columns), minmax(100px, 1fr)) [actions] auto;
     align-items: center;
     justify-content: center;
     gap: .25em;
@@ -13,7 +14,7 @@ table.list {
         > tr {
             display: grid;
             grid-template-columns: subgrid;
-            grid-column: 1 / 3;
+            grid-column: 1 / -1;
         }
     }
     tbody > tr {
@@ -26,5 +27,11 @@ table.list {
     th, td {
         padding: .25rem .5rem;
         border: 1px solid black;
+    }
+    .full-width {
+        grid-column: 1 / -1;
+    }
+    .span-to-end {
+        grid-column-end: -1;
     }
 }
